:heavy_plus_Sign: Feat(function/three-furniture): 가구 glft 모델 불러와서 화면에 띄우기

--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "gltf-loader": "^1.0.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "three": "^0.155.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/three": "^0.155.1",
+    "file-loader": "^6.2.0"
   }
 }
